@@ -2,27 +2,25 @@ package com.springddd.application.service.dict;
 
 import com.springddd.application.service.dict.dto.SysDictCommand;
 import com.springddd.domain.dict.*;
-import com.springddd.infrastructure.persistence.factory.RepositoryFactory;
-import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
+import java.util.Arrays;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class SysDictCommandServiceTest {
 
     @Mock
-    private RepositoryFactory repositoryFactory;
+    private SysDictDomainRepository sysDictDomainRepository;
 
     @Mock
     private SysDictDomainFactory sysDictDomainFactory;
@@ -36,90 +34,77 @@ class SysDictCommandServiceTest {
     @Mock
     private RestoreSysDictByIdDomainService restoreSysDictByIdDomainService;
 
-    @Mock
-    private SysDictDomainRepository sysDictDomainRepository;
+    private SysDictCommandService sysDictCommandService;
 
-    @InjectMocks
-    private SysDictCommandService service;
-
-    @Test
-    @DisplayName("create 应创建字典并返回 ID")
-    void create_shouldCreateDictAndReturnId() {
-        SysDictCommand command = new SysDictCommand();
-        command.setDictName("Status");
-        command.setDictCode("status");
-        command.setSortOrder(1);
-        command.setDictStatus(true);
-        command.setDictStatus(true);
-
-        SysDictDomain domain = new SysDictDomain();
-        when(sysDictDomainFactory.newInstance(any(DictBasicInfo.class), any(DictExtendInfo.class))).thenReturn(domain);
-        when(repositoryFactory.getSysDictDomainRepository()).thenReturn(sysDictDomainRepository);
-        when(sysDictDomainRepository.save(domain)).thenReturn(Mono.just(1L));
-
-        StepVerifier.create(service.create(command))
-                .assertNext(id -> assertThat(id).isEqualTo(1L))
-                .verifyComplete();
-
-        verify(sysDictDomainFactory).newInstance(any(DictBasicInfo.class), any(DictExtendInfo.class));
-        verify(sysDictDomainRepository).save(domain);
+    @BeforeEach
+    void setUp() {
+        sysDictCommandService = new SysDictCommandService(
+                sysDictDomainRepository,
+                sysDictDomainFactory,
+                wipeSysDictByIdsDomainService,
+                deleteSysDictByIdDomainService,
+                restoreSysDictByIdDomainService
+        );
     }
 
     @Test
-    @DisplayName("update 应更新字典")
-    void update_shouldUpdateDict() {
+    void create_shouldReturnId_whenValidCommand() {
+        SysDictCommand command = new SysDictCommand();
+        command.setDictName("Test Dict");
+        command.setDictCode("TEST");
+        command.setSortOrder(1);
+        command.setDictStatus(true);
+
+        SysDictDomain mockDomain = new SysDictDomain();
+        when(sysDictDomainFactory.newInstance(any(), any())).thenReturn(mockDomain);
+        when(sysDictDomainRepository.save(any())).thenReturn(Mono.just(1L));
+
+        StepVerifier.create(sysDictCommandService.create(command))
+                .expectNext(1L)
+                .verifyComplete();
+    }
+
+    @Test
+    void update_shouldComplete_whenValidCommand() {
         SysDictCommand command = new SysDictCommand();
         command.setId(1L);
-        command.setDictName("Updated");
-        command.setDictCode("updated");
-        command.setSortOrder(1);
-        command.setDictStatus(true);
+        command.setDictName("Updated Dict");
+        command.setDictCode("UPDATED");
+        command.setSortOrder(2);
+        command.setDictStatus(false);
 
-        SysDictDomain domain = new SysDictDomain();
-        when(repositoryFactory.getSysDictDomainRepository()).thenReturn(sysDictDomainRepository);
-        when(sysDictDomainRepository.load(new DictId(1L))).thenReturn(Mono.just(domain));
-        when(sysDictDomainRepository.save(domain)).thenReturn(Mono.just(1L));
+        SysDictDomain mockDomain = new SysDictDomain();
+        when(sysDictDomainRepository.load(any())).thenReturn(Mono.just(mockDomain));
+        when(sysDictDomainRepository.save(any())).thenReturn(Mono.just(1L));
 
-        StepVerifier.create(service.update(command))
+        StepVerifier.create(sysDictCommandService.update(command))
                 .verifyComplete();
-
-        verify(sysDictDomainRepository).load(new DictId(1L));
-        verify(sysDictDomainRepository).save(domain);
     }
 
     @Test
-    @DisplayName("delete 应调用 deleteByIds 领域服务")
-    void delete_shouldCallDomainService() {
-        List<Long> ids = List.of(1L, 2L);
+    void delete_shouldDelegateToDomainService() {
+        List<Long> ids = Arrays.asList(1L, 2L);
         when(deleteSysDictByIdDomainService.deleteByIds(ids)).thenReturn(Mono.empty());
 
-        StepVerifier.create(service.delete(ids))
+        StepVerifier.create(sysDictCommandService.delete(ids))
                 .verifyComplete();
-
-        verify(deleteSysDictByIdDomainService).deleteByIds(ids);
     }
 
     @Test
-    @DisplayName("wipe 应调用 wipe 领域服务")
-    void wipe_shouldCallDomainService() {
-        List<Long> ids = List.of(1L, 2L);
+    void wipe_shouldDelegateToDomainService() {
+        List<Long> ids = Arrays.asList(1L, 2L);
         when(wipeSysDictByIdsDomainService.deleteByIds(ids)).thenReturn(Mono.empty());
 
-        StepVerifier.create(service.wipe(ids))
+        StepVerifier.create(sysDictCommandService.wipe(ids))
                 .verifyComplete();
-
-        verify(wipeSysDictByIdsDomainService).deleteByIds(ids);
     }
 
     @Test
-    @DisplayName("restore 应调用 restore 领域服务")
-    void restore_shouldCallDomainService() {
-        List<Long> ids = List.of(1L, 2L);
+    void restore_shouldDelegateToDomainService() {
+        List<Long> ids = Arrays.asList(1L, 2L);
         when(restoreSysDictByIdDomainService.restoreByIds(ids)).thenReturn(Mono.empty());
 
-        StepVerifier.create(service.restore(ids))
+        StepVerifier.create(sysDictCommandService.restore(ids))
                 .verifyComplete();
-
-        verify(restoreSysDictByIdDomainService).restoreByIds(ids);
     }
 }
